--- a/css/dynTable.css
+++ b/css/dynTable.css
@@ -1,10 +1,11 @@
-/* File: dynTable.css GUI Assignment: Validation Plugin
-This file provides the CSS styling for the form and the multiplication table. 
-Mustapha Ayad, UMass Lowell Computer Science, mustapha_ayad@student.uml.edu Copyright (c) 2021 by Mustapha. All rights reserved. May be freely copied or excerpted for educational purposes with credit to the author. updated by MA on November 22nd, 2021 at 3:32 PM */
+/* File: dynTable.css GUI Assignment: Validation Plugin This file provides the CSS styling for the form and the multiplication table. Mustapha Ayad, UMass Lowell Computer Science, mustapha_ayad@student.uml.edu Copyright (c) 2021 by Mustapha. All rights reserved. May be freely copied or excerpted for educational purposes with credit to the author. updated by MA on November 22nd, 2021 at 3:32 PM */
 /*Clearing default spacing*/
 html, body {
     margin: 0;
     padding: 0;
+}
+body {
+    height: 100%;
 }
 /*Form*/
 /*display: block starts error message, inputs, and labels on new lines*/
@@ -79,7 +80,57 @@ table tr td:nth-child(1) {
     font-size: 2em;
     font-weight: bold;
 }
-/*footer*/
-#main-footer {
+/*footer https://www.freecodecamp.org/news/how-to-keep-your-footer-where-it-belongs-59c6aa05c59c
+/*/
+#page-container {
+    position: relative;
+    min-height: 100vh;
+}
+#content-wrap {
+    padding-bottom: 2.5rem;
+   /* Footer height */
+}
+#footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2.5rem;
+   /* Footer height */
     text-align: center;
+}
+/* tableTabs bg */
+#tableTabs {
+    background: white;
+    display: block;
+}
+.ui-tabs .ui-tabs-nav {
+    height: 37px;
+    padding-top: 100px;
+}
+/* Slider background*/
+.ui-slider-horizontal {
+    background: lightblue;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+/*handle color*/
+.ui-slider-horizontal .ui-slider-handle {
+    background: lightyellow;
+    border: none;
+}
+/* Nav background */
+.ui-tabs-nav {
+    background: pink;
+    color: white;
+}
+/* background of tabs */
+.tab.ui-state-default {
+    background: lightblue;
+    color: white;
+}
+/* background of active tabs */
+.tab.ui-state-active {
+    background: lightgreen;
+    color: black;
 }
